--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -25,12 +25,16 @@
             </tbody>
         </table>
     </div>
+
+    <div class="row">
+        <h3>A random integer:</h3>
+        <div class="wheel" id="ws">
+            No data yet...
+        </div>
+    </div>
 </div>
 
 
-<ul id="list">
-
-</ul>
 <script src="libs/jsonpipe.js"></script>
 <script src="libs/jquery.js"></script>
 <script src="libs/bootstrap.js"></script>
@@ -42,8 +46,8 @@
         "success": function (data) {
             $("#products")
                 .append("<tr><td>" + data.id + "</td>" +
-                    "<td>" + data.name +"</td>" +
-                    "<td>" + data.price +"</td></tr>");
+                    "<td>" + data.name + "</td>" +
+                    "<td>" + data.price + "</td></tr>");
         },
         "error": function (errorMsg) {
             // Something wrong happened, check the error message
@@ -59,14 +63,18 @@
 
     eb.onopen = function () {
         eb.registerHandler('products', function (error,
-                                                 product) {
-            var data = JSON.parse(product["body"]);
+                                                 msg) {
+            var data = JSON.parse(msg["body"]);
             $("#products")
                 .append("<tr><td>" + data.id + "</td>" +
-                    "<td>" + data.name +"</td>" +
-                    "<td>" + data.price +"</td></tr>");
+                    "<td>" + data.name + "</td>" +
+                    "<td>" + data.price + "</td></tr>");
         });
-    }
+        eb.registerHandler('random', function (error,
+                                                 msg) {
+            $("#ws").html("<code>" + msg.body + "</code>");
+        });
+    };
 
 </script>
 </body>
